--- a/Documents/TURKU AMK/WWW2019/wwwsivu_pelit/pelit/views/genre_form.pug
+++ b/Documents/TURKU AMK/WWW2019/wwwsivu_pelit/pelit/views/genre_form.pug
@@ -7,7 +7,7 @@ block content
     div.form-group(class='input')
       label(for='name') Genre:
       input#name.form-control(type='text', placeholder='FPS, RPG, puzzle...' name='name' value=(undefined===genre ? '' : genre.name))
-    button.btn.btn-primary(type='submit') Submit
+    button.btn.btn-primary(type='submit' class='add') Submit
 
   if errors 
    ul
