--- a/Documents/TURKU AMK/WWW2019/wwwsivu_pelit/pelit/views/gamestudio_detail.pug
+++ b/Documents/TURKU AMK/WWW2019/wwwsivu_pelit/pelit/views/gamestudio_detail.pug
@@ -3,7 +3,8 @@ extends layout
 block content
 
   h1 Gamestudio: #{gamestudio.name}
-  p (#{gamestudio.date_of_birth} - #{gamestudio.date_of_death})
+  p Has started in #{gamestudio.starting_year}
+  p History: #{gamestudio.gamestudio_history}
   
   div(style='margin-left:20px;margin-top:20px')
 
