--- a/Documents/TURKU AMK/WWW2019/wwwsivu_pelit/pelit/views/game_list.pug
+++ b/Documents/TURKU AMK/WWW2019/wwwsivu_pelit/pelit/views/game_list.pug
@@ -16,5 +16,5 @@ block content
     a(href='/catalog/game/create') Add new game  
 
 block footer
-  img(class="displayed" src="https://www.ultragamerz.com/wp-content/uploads/2017/07/geforce-now-gamewall-v2.png", alt="poster is not here yet!")
+  img(class="displayed" src="https://mve.tn/wp-content/uploads/2018/05/3-steps-to-faster-steam-downloads-featured-image-1050x600.jpg", alt="poster is not here yet!")
    
