--- a/Documents/TURKU AMK/WWW2019/wwwsivu_pelit/pelit/views/game_form.pug
+++ b/Documents/TURKU AMK/WWW2019/wwwsivu_pelit/pelit/views/game_form.pug
@@ -24,7 +24,7 @@ block content
             option(value=gamestudio._id) #{gamestudio.name}
     div.form-group(class='input')
       label(for='summary') Summary:
-      input#summary.form-control(type='textarea', placeholder='Summary' name='summary' rows='6' value=(undefined===game ? '' : game.summary) required='true')
+      textarea.form-control(type='textarea', placeholder='Summary' name='summary' rows='6' value=(undefined===game ? '' : game.summary) required='true')
     div.form-group(class='input')
       label(for='players') Players:
       input#players.form-control(type='text', placeholder='How many players?' name='players' value=(undefined===game ? '' : game.players) required='true') 
@@ -42,7 +42,7 @@ block content
           div(style='display: inline; padding-right:10px;')
             input.checkbox-input(type='checkbox', name='platform', id=platform._id, value=platform._id, checked=platform.checked )
             label(for=platform._id) #{platform.name}
-    button.btn.btn-primary(type='submit') Submit
+    button.btn.btn-primary(type='submit' class='add') Submit
 
   if errors 
     ul
